--- a/index.html
+++ b/index.html
@@ -82,17 +82,17 @@
 
     // Listing and coordinate information
     var addresses = [
-        { location: [40.02666238280277, -83.08930613243439], name: '3578 Sunset Dr', price: 2600, bedrooms: 4, bathrooms: 2.5 },
-        { location: [39.982259337179435, -83.0074550380364], name: '106 W 2nd Ave', price: 2450, bedrooms: 4, bathrooms: 2 },
-        { location: [40.01753735480641, -83.06336140359866], name: '1909 Inchcliff Rd', price: 2600, bedrooms: 4, bathrooms: 3 },
-        { location: [39.98832831362016, -83.01541626127265], name: '351 W 6th Ave', price: 1500, bedrooms: 4, bathrooms: 1 },
-        { location: [40.046410161618795, -83.03560293243333], name: '4221 Evansdale Rd', price: 2540, bedrooms: 4, bathrooms: 2.5 },
-        { location: [40.02571590077187, -83.040720874762], name: '961 Oberlin Dr', price: 2600, bedrooms: 4, bathrooms: 2.5 },
-        { location: [40.02610730594412, -82.9878915035982], name: '2978 Pontiac St', price: 1350, bedrooms: 4, bathrooms: 1 },
-        { location: [39.98558789963125, -83.01372797476415], name: '313 W 4th Ave', price: 2500, bedrooms: 4, bathrooms: 1.5 },
-        { location: [40.06026631335666, -83.01119683243256], name: '307 E Royal Forest Blvd', price: 1945, bedrooms: 4, bathrooms: 2 },
-        { location: [39.99130066795056, -83.00469483243627], name: '53 Euclid Ave', price: 2450, bedrooms: 4, bathrooms: 2 },
-        { location: [40.00804034546833, -82.99715564592675], name: '457 Alden Ave', price: 1900, bedrooms: 4, bathrooms: 2 },
+        { location: [40.02666238280277, -83.08930613243439], name: '3578 Sunset Dr', price: 2600, bedrooms: 4, bathrooms: 2.5, website: 'https://www.apartments.com/3578-sunset-dr-columbus-oh/6jyf7cr/' },
+        { location: [39.982259337179435, -83.0074550380364], name: '106 W 2nd Ave', price: 2450, bedrooms: 4, bathrooms: 2, website: 'https://www.rentals.com/Ohio/Columbus/lv724447555/' },
+        { location: [40.01753735480641, -83.06336140359866], name: '1909 Inchcliff Rd', price: 2600, bedrooms: 4, bathrooms: 3, website: 'https://www.zillow.com/homedetails/1909-Inchcliff-Rd-Upper-Arlington-OH-43221/33994360_zpid/' },
+        { location: [39.98832831362016, -83.01541626127265], name: '351 W 6th Ave', price: 1500, bedrooms: 4, bathrooms: 1, website: 'https://www.trulia.com/building/w-6th-ave-351-353-gw2-351-w-6th-ave-columbus-oh-43201-2097022356' },
+        { location: [40.046410161618795, -83.03560293243333], name: '4221 Evansdale Rd', price: 2540, bedrooms: 4, bathrooms: 2.5, website: 'https://www.zillow.com/homedetails/4221-Evansdale-Rd-Columbus-OH-43214/33914671_zpid/' },
+        { location: [40.02571590077187, -83.040720874762], name: '961 Oberlin Dr', price: 2600, bedrooms: 4, bathrooms: 2.5, website: 'https://www.zillow.com/homedetails/961-Oberlin-Dr-Columbus-OH-43221/33911912_zpid/' },
+        { location: [40.02610730594412, -82.9878915035982], name: '2978 Pontiac St', price: 1350, bedrooms: 4, bathrooms: 1, website: 'https://www.apartments.com/2978-pontiac-st-columbus-oh/m7x0fsk/' },
+        { location: [39.98558789963125, -83.01372797476415], name: '313 W 4th Ave', price: 2500, bedrooms: 4, bathrooms: 1.5, website: 'https://www.redfin.com/OH/Columbus/313-W-4th-Ave-43201/home/75592416' },
+        { location: [40.06026631335666, -83.01119683243256], name: '307 E Royal Forest Blvd', price: 1945, bedrooms: 4, bathrooms: 2, website: 'https://www.apartments.com/307-e-royal-forest-blvd-columbus-oh-43214-columbus-oh/sg9en87/' },
+        { location: [39.99130066795056, -83.00469483243627], name: '53 Euclid Ave', price: 2450, bedrooms: 4, bathrooms: 2, website: 'https://www.zillow.com/homedetails/53-Euclid-Ave-Columbus-OH-43201/33830755_zpid/' },
+        { location: [40.00804034546833, -82.99715564592675], name: '457 Alden Ave', price: 1900, bedrooms: 4, bathrooms: 2, website: 'https://www.apartments.com/457-alden-ave-columbus-oh/m4bbc5j/' },
 
 
         // Add more addresses as needed
@@ -102,8 +102,7 @@
     function addMarkers() {
       addresses.forEach(function(address) {
           L.marker(address.location).addTo(map).bindPopup(
-            `${address.name}<br>Price: $${address.price || 'Contact for price'}<br>Bedrooms: ${address.bedrooms || 'N/A'}<br>Bathrooms: ${address.bathrooms || 'N/A'}`
-          );
+            `<a href="${address.website}" target="_blank">${address.name}</a><br>Price: $${address.price || 'Contact for price'}<br>Bedrooms: ${address.bedrooms || 'N/A'}<br>Bathrooms: ${address.bathrooms || 'N/A'}`);
       });
     }
 
